--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-This is a demo project....
+<!DOCTYPE html>
+<html>
+  <head><title>Hello from CodePipeline</title></head>
+  <body><h1>It works!</h1></body>
+</html>
