--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Hello from CodePipeline ilakkiya</title></head>
-  <body><h1>It works ilakkiya!</h1></body>
+  <head><title>Hello from CodePipeline kaviya</title></head>
+  <body><h1>It works kaviya!</h1></body>
 </html>
