--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<!DOCTYPE html>
 <html>
-  <head><title>Hello from CodePipeline kaviya</title></head>
-  <body><h1>It works kaviya!</h1></body>
+    <head>
+        <title>Sample Website - AWS CodePipeline Step by Step</title>
+    </head>
+    <body style="text-align:center;font-family:Verdana;margin:1%;">
+        <h1 style="color:navy">Welcome to Our Website! - GAYU</h1>
+        <hr>
+        <p>This is a simple, static website that we deploy by creating a pipeline on AWS CodePipeline.</p>
+        <h2>Website Version: 5.0</h2>
+    </body>
 </html>
